# Codex_Handwork

./: .gitignore  README.md  get_email_code.py  gui.py  pyproject.toml  requirements.txt  settings_example.json
data/: email_counter.json
src/codex_handwork/: __init__.py  __main__.py  app.py  gui.py  settings.py
src/codex_handwork/services/: __init__.py  count.py  cpa_upload.py  email_store.py  mail.py  oauth.py  status.py  temp_mail.py
