[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex_handwork"
version = "0.1.0"
description = "Codex Handwork desktop helper"
requires-python = ">=3.10"
dependencies = [
  "PySide6==6.11.0",
  "requests>=2.31.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
