[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex_handwork"
version = "0.1.0"
description = "Codex Handwork desktop helper"
requires-python = ">=3.10"
dependencies = [
  "PySide6==6.11.0",
  "requests>=2.31.0",
  "curl_cffi>=0.7",
  "fastapi>=0.135.3",
]

[project.scripts]
codex-handwork = "codex_handwork.app:run"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_handwork = ["assets/*.png"]
